# zuul

./: .gitignore  .zuul.yaml  Dockerfile  README.rst  TESTING.rst  bindep.txt  noxfile.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: about.rst  admin.rst  authentication.rst  client.rst  components.rst  concepts.rst  conf.py  configuration.rst  gating.rst  glossary.rst  governance.rst  index.rst  installation.rst  job-content.rst  monitoring.rst  operation.rst  project-config.rst  rest-api.rst  tenants.rst  tracing.rst  troubleshooting.rst  upgrading.rst  vulnerabilities.rst
doc/uml/: conf_loader_class.puml  conf_loader_seq.puml  executor_seq.puml  nodepool_register.puml  process_1.puml  scheduler_class.puml  scheduler_sequence.puml  zk_seq.puml
etc/: zuul.conf-sample
playbooks/image/: test-image.yaml
playbooks/tutorial/: admin.yaml  post.yaml  pre.yaml  quick-start.yaml  run-localtest-quick-start.yaml  run-tutorial.yaml  run.yaml  tracing.yaml
playbooks/zuul-nox/: post-system-logs.yaml  pre.yaml
playbooks/zuul-stream/: 2.7-container.yaml  create-inventory.yaml  functional.yaml  post.yaml  pre.yaml  validate.py  validate.yaml
playbooks/zuul-upgrade/: run.yaml
releasenotes/notes/: 4.0.0-d707ea7649a815dd.yaml  520-windows-7737f20c23b0afee.yaml  access-rules-096ecf9ae747188e.yaml  add-buildset-statusurl.yaml  add-gitlab-squash-mode-3e981204342ac6f9.yaml  add-pre-timeout-51b1171f833a9eee.yaml  allow-unzoned-dd1ed12dbd870d00.yaml  always-dynamic-dce165ca8b6e212f.yaml  ansible-11-added-04ab907dde27acbe.yaml  (+217 more)
tests/: base.py  fake_aws.py  fake_graphql.py  fake_nodescan.py  fake_openstack.py  fakegerrit.py  fakegithub.py  fakegitlab.py  fakepagure.py  make_playbooks.py  otlp_fixture.py  util.py
tools/: docker-compose.yaml  install-js-repos-rpm.sh  install-js-tools.sh  pip.sh  test-setup-docker.sh  yarn-build.sh
web/: .eslintrc  config-overrides.js  package.json
web/src/: App.jsx  (+15 more)
zuul/: change_matcher.py  configloader.py  exceptions.py  model.py  model_api.py  nodepool.py  scheduler.py  version.py
zuul_bak/: .zuul.yaml
(+993 files in other folders)
