[metadata]
name = zuul
summary = A Project Gating System
description_file =
    README.rst
author = Zuul Team
author_email = zuul-discuss@lists.zuul-ci.org
home_page = https://zuul-ci.org/
python_requires = >=3.11
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[pbr]
warnerrors = True

[global]
setup_hooks =
  zuul._setup_hook.setup_hook

[entry_points]
console_scripts =
    zuul-scheduler = zuul.cmd.scheduler:main
    zuul-merger = zuul.cmd.merger:main
    zuul = zuul.cmd.client:main
    zuul-admin = zuul.cmd.client:main
    zuul-executor = zuul.cmd.executor:main
    zuul-bwrap = zuul.driver.bubblewrap:main
    zuul-web = zuul.cmd.web:main
    zuul-fingergw = zuul.cmd.fingergw:main
    zuul-manage-ansible = zuul.cmd.manage_ansible:main
    zuul-launcher = zuul.cmd.launcher:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[extras]
# The container image build process will look at the python extras and install
# any that match the target container name. It makes a container image for
# every console_script listed above. The extra name must have underscores.
# This is a place to put dependencies that should go into reasonable container
# images but that we do not want to list directly in requirements.txt.
zuul_base =
    yappi
    objgraph
    python-logstash-async

[mypy]
allow_redefinition = True
files = zuul
ignore_missing_imports = True
python_version = 3.6

[flake8]
# These are ignored intentionally in zuul projects;
# please don't submit patches that solely correct them or enable them.
ignore = E124,E125,E129,E252,E402,E741,H,W503,W504
show-source = True
exclude = .venv,.tox,.nox,dist,doc,build,*.egg,node_modules
